DROP TABLE IF EXISTS user_photos CASCADE;
DROP TABLE IF EXISTS messages CASCADE;
DROP TABLE IF EXISTS conversations CASCADE;
DROP TABLE IF EXISTS likes CASCADE;
DROP TABLE IF EXISTS friendships CASCADE;
DROP TABLE IF EXISTS hobbies CASCADE;
DROP TABLE IF EXISTS addresses CASCADE;
DROP TABLE IF EXISTS users CASCADE;

CREATE TABLE "users" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "email" varchar(255) UNIQUE NOT NULL,
  "password" varchar(255),
  "first_name" varchar(100) NOT NULL,
  "last_name" varchar(100) NOT NULL,
  "phone_number" varchar,
  "gender" varchar(20),
  "preferred_gender" varchar(20),
  "birth_date" date,
  "created_at" timestamp DEFAULT (now()),
  "updated_at" timestamp DEFAULT (now())
);

CREATE TABLE "addresses" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" int,
  "street" varchar(200),
  "house_number" varchar(20),
  "postal_code" varchar(10),
  "city" varchar(100),
  "is_primary" boolean DEFAULT false,
  "created_at" timestamp DEFAULT (now())
);

CREATE TABLE "hobbies" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" int,
  "name" varchar,
  "rating" int,
  "created_at" timestamp DEFAULT (now())
);

CREATE TABLE "friendships" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id_1" int,
  "user_id_2" int,
  "status" varchar(20) DEFAULT 'pending',
  "created_at" timestamp DEFAULT (now())
);

CREATE TABLE "likes" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "liker_user_id" int,
  "liked_user_id" int,
  "status" varchar(20) DEFAULT 'pending',
  "created_at" timestamp DEFAULT (now()),
  "updated_at" timestamp DEFAULT (now())
);

CREATE TABLE "conversations" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "created_at" timestamp DEFAULT (now()),
  "users" int
);

CREATE TABLE "messages" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "conversation_id" int,
  "sender_user_id" int,
  "message_text" text NOT NULL,
  "sent_at" timestamp DEFAULT (now())
);

CREATE TABLE "user_photos" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" int,
  "photo_data" bytea,
  "photo_url" varchar(500),
  "is_profile_picture" boolean DEFAULT false,
  "file_name" varchar(255),
  "file_size" int,
  "uploaded_at" timestamp DEFAULT (now())
);

CREATE INDEX ON "users" ("email");

CREATE INDEX ON "users" ("first_name", "last_name");

CREATE UNIQUE INDEX ON "hobbies" ("user_id");

CREATE INDEX ON "hobbies" ("rating");

CREATE UNIQUE INDEX ON "friendships" ("user_id_1", "user_id_2");

CREATE INDEX ON "friendships" ("status");

CREATE UNIQUE INDEX ON "likes" ("liker_user_id", "liked_user_id");

CREATE INDEX ON "likes" ("status");

CREATE INDEX ON "likes" ("created_at");

CREATE INDEX ON "messages" ("conversation_id");

CREATE INDEX ON "messages" ("sender_user_id");

CREATE INDEX ON "messages" ("sent_at");

CREATE INDEX ON "user_photos" ("user_id");

CREATE INDEX ON "user_photos" ("is_profile_picture");

ALTER TABLE "addresses" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id");

ALTER TABLE "hobbies" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id");

ALTER TABLE "friendships" ADD FOREIGN KEY ("user_id_1") REFERENCES "users" ("id");

ALTER TABLE "friendships" ADD FOREIGN KEY ("user_id_2") REFERENCES "users" ("id");

ALTER TABLE "likes" ADD FOREIGN KEY ("liker_user_id") REFERENCES "users" ("id");

ALTER TABLE "likes" ADD FOREIGN KEY ("liked_user_id") REFERENCES "users" ("id");

-- Removed problematic users_conversations table


ALTER TABLE "messages" ADD FOREIGN KEY ("conversation_id") REFERENCES "conversations" ("id");

ALTER TABLE "messages" ADD FOREIGN KEY ("sender_user_id") REFERENCES "users" ("id");

ALTER TABLE "user_photos" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id");
